application/weblogic-app/jsp-redirect-rule.tf
resource "aws_lb_listener_rule" "jsp_redirect_listener_rule" {
  listener_arn = module.weblogic.lb_listener_arn
  priority     = 2
  condition {
    path_pattern {
      values = ["/NDelius*.jsp", "/NDelius*login.jsp*"]
    }
  }
  action {
    type = "fixed-response"
    fixed_response {
      content_type = "text/html"
      status_code  = "200"
      message_body = "<html lang=\"en\" class=\"bg-light h-100\"><head><title>National Delius</title><link href=\"https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css\" rel=\"stylesheet\"></head><body class=\"bg-light h-100\"><div class=\"container\" style=\"max-width: 600px;\"><h1 class=\"text-center font-weight-light w-100 pt-5 pb-4\">National Delius</h1><div class=\"card card-body\"><div class=\"form-group\"><label class=\"control-label\" for=\"url\">The link to National Deli [...]
    }
  }
}
